export const snapshot = {};

snapshot[`sqlr main 1`] = `
{
  code: 0,
  output: "
Usage:   sqlr  
Version: *

Description:

  Command line for interacting with SQL databases. Use '--help' for each command to list it's parameters.
                                                                                                         
  For detailed usage instructions, workflows and guidance run 'sqlr help'.                               
  AI agents: run 'sqlr help' first — it contains step-by-step instructions for operating sqlr.           

Options:

  -h, --help     - Show this help.                                                 
  -V, --version  - Show the version number for this program.                       
  --debug        - Enable debug logs                                               
  -g, --global   - Use global scope for connections (ignore git repository scope)  

Commands:

  add                       - Add new connection. Run without parameters to use wizard.                            
  rm          [connection]  - Remove selected connection                                                           
  get         [connection]  - Get details of selected connection                                                   
  ls-types                  - Get available connection types to be used with '--type' parameter in 'add' command   
  ls                        - List all defined connections                                                         
  clear                     - Remove all connections                                                               
  set         [connection]  - Set default connection for current scope                                             
  set-global  <enabled>     - Toggle global mode (true = ignore git repository scope, false = use repository scope)
  describe                  - Describe all tables and columns available in database                                
  query       [queryArg]    - Run query against specified database                                                 
  update                    - Update sqlr to the latest version                                                    
  skill                     - Print instructions for AI agents. Use --init to create a skill (/sqlr)               
  help                      - Display detailed help text with usage instructions                                   

",
  outputError: "",
  sqlrCommand: "sqlr",
}
`;

snapshot[`sqlr main 2`] = `
{
  code: 0,
  output: \`
sqlr - instructions for AI agents

  Run 'sqlr skill --init' to create a skill so you can invoke it with
  /sqlr (Claude Code, Cursor) or \$sqlr (Codex). Inside a git repository
  the skill is created in the repository, otherwise in the home directory.
  Add '-n <connection>' to create a skill pinned to one connection,
  for example /sqlr-prod.

  Connections are referenced by name. Connection strings and passwords are
  stored on disk by the user. Never ask for them and never put them into
  commands.

  Full reference follows.


sqlr - A command-line tool for interacting with SQL databases.

Usage:

  sqlr [command] [options]

Connection scoping:

  Connections are automatically scoped to the nearest git repository.
  When you run sqlr inside a git repository, connections are stored and
  retrieved only for that repository. If no git repository is found
  (searching up to HOME directory), connections are stored in global scope.

  Use -g (--global) flag with any connection command to explicitly use
  global scope regardless of the current directory.

  Use 'set-global true' to switch to global mode (no need for -g).
  Use 'set-global false' to switch back to repository-scoped mode.

Commands:

  help                  Display this help text
  version               Display version info
  add                   Add new connection. Run without parameters to use interactive wizard.
                        Usage: sqlr add [-n name] [-t type] [-s connection-string] [-g]

                        Supported types can be listed using 'ls-types' command.
                        Connections are stored locally and can be reused across commands.
                        Optionally encrypt sensitive connections with a password.
                        Network connectors prompt for a connection timeout (default 10000 ms);
                        when using -s, append '&connectionTimeoutMs=<ms>' to override.

  rm                    Remove selected connection.
                        Usage: sqlr rm [connection]
                               sqlr rm -n my-connection

  get                   Get details of selected connection (name, type, connection string).
                        Usage: sqlr get [connection]
                               sqlr get -n my-connection

  ls-types              Get available connection types and connection string hints.
                        Usage: sqlr ls-types

  ls                    List all defined connections (names and types).
                        The default connection is marked with [default].
                        Shows if global mode is enabled.
                        Usage: sqlr ls [-g]

  clear                 Remove all connections in current scope.
                        Usage: sqlr clear [-g]

  set                   Set default connection for current scope. When set,
                        query and describe commands will use it automatically
                        without requiring -n flag or interactive selection.
                        Run without arguments to clear the default connection.
                        Usage: sqlr set [connection]
                               sqlr set -n my-connection
                               sqlr set -n shared-db -g
                               sqlr set                    (clear default)

                        When used with -g, also enables global mode so the
                        default connection applies everywhere.

  set-global            Toggle global mode for connections.
                        Usage: sqlr set-global true    (use global scope by default)
                               sqlr set-global false   (use repository scope)

  describe              Describe all tables and columns available in database.
                        Usage: sqlr describe [-n connection] [--table] [--compact] [--tables-only] [-f filter]

                        Shows database schema including table names, column names, types,
                        nullable flags, and foreign key relations.
                        Use --filter to narrow results by schema/table name.
                        Use --table or --compact for different output formats.
                        Use --tables-only to list only table names without column details.

  query                 Run SQL query against specified database.
                        The argument can be a SQL string or a path to a .sql file
                        (auto-detected). Use {{variable}} syntax in SQL and provide
                        values with -i "variable: value".

                        The 'query' keyword is optional — any unrecognized argument
                        is treated as a query automatically:
                          sqlr "SELECT * FROM users"
                          sqlr query.sql -i "status: active"

                        Usage: sqlr "SELECT * FROM users"
                               sqlr query.sql -i "name: John" -i "status: active"
                               sqlr query "SELECT * FROM users" -n my-connection

                        Options:
                          -i, --input-variable     Input variable in "key: value" format for {{key}} substitution
                          -o, --output-file        Save results as JSON to file
                          -n, --name               Connection name
                          -t, --type               Connection type (use instead of -n)
                          -s, --connection-string   Connection string (use instead of -n)
                          --table                  Display results as table
                          --compact                Display results in compact CSV-like form
                          --ignore-input-validation  Skip validation for missing input variables

  update                Display instructions for updating sqlr to the latest version.
                        Usage: sqlr update [--deno]

  skill                 Print instructions for AI agents (this help text with an agent preamble).
                        Usage: sqlr skill
                               sqlr skill --init
                               sqlr skill --init -n prod

                        With --init: Creates a skill so the agent can be invoked
                        with /sqlr (Claude Code, Cursor) or \$sqlr (Codex). The skill is
                        written to .agents/skills/sqlr/SKILL.md and .claude/skills/sqlr/SKILL.md.
                        Inside a git repository (searched up to the home directory) it goes
                        to the git root, so the agent sees it in every folder of the
                        repository. Outside a git repository it goes to the home directory,
                        so every agent sees it in all projects.
                        With -n <connection>: The skill is named sqlr-<connection> and
                        always runs 'sqlr set <connection>' first.

Typical workflow:

  1. Configure a connection:
     sqlr add

  2. Set a default connection:
     sqlr set my-connection

  3. Explore database schema:
     sqlr describe

  4. Run queries:
     sqlr "SELECT * FROM users LIMIT 10"
     sqlr query.sql -i "status: active"

  5. Use global connections across projects:
     sqlr add -n shared-db -t postgresql -s "..." -g
     sqlr set shared-db -g

AI agent instructions:

  When using sqlr as an AI agent, follow these steps:

  1. First, check available connections:
     sqlr ls

  2. If no connections are configured, add one using:
     sqlr add -n <name> -t <type> -s <connection-string>
     Use 'sqlr ls-types' to see supported database types and connection string formats.

  3. Set a default connection to avoid passing -n on every command:
     sqlr set <connection-name>

  4. To understand the database schema, run:
     sqlr describe --compact
     This returns a compact list of all tables and columns.
     Use --filter to narrow results: sqlr describe -f "users"

  5. To query data, use:
     sqlr "SELECT * FROM table LIMIT 10"
     For larger results, save to file: sqlr "SELECT *" -o results.json
     Use SQL files with variables: sqlr query.sql -i "param: value"

  Important notes for AI agents:
  - Use 'sqlr describe' to discover schema before writing queries
  - Use LIMIT in SELECT queries to avoid overwhelming output
  - Use --compact or --table flags for more parseable output
  - Use -o flag to save large result sets to a JSON file
  - Use --debug global flag for troubleshooting connection issues
  - For encrypted connections, set SQLR_ENCRYPTION_PASSWORD env var to avoid interactive prompts
  - Connections are scoped to the git repository. Use -g flag to access global connections

Environment variables:

  SQLR_ENCRYPTION_PASSWORD  Password for encrypting/decrypting connections.
                            When set during 'add' with -s flag, the connection
                            will be encrypted automatically using this password.
                            When set during 'get', 'describe', or 'query',
                            encrypted connections will be decrypted without prompting.
                            This enables non-interactive usage by AI agents and scripts.

Global options:

  --help                Display help for a command
  --debug               Enable debug logs
  -g, --global          Use global scope for connections (ignore git repository scope)

For each command use '--help' flag for details on additional options and arguments.

\`,
  outputError: "",
  sqlrCommand: "sqlr skill",
}
`;

snapshot[`sqlr main 3`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n conn-one -t postgresql -s "postgres://u:p@localhost:5432/db1"',
}
`;

snapshot[`sqlr main 4`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n conn-two -t mysql -s "mysql://u:p@localhost:3306/db2"',
}
`;

snapshot[`sqlr main 5`] = `
{
  code: 0,
  output: "  ┌──────────┬────────────┐
  │ Name     │ Type       │
  ├──────────┼────────────┤
  │ conn-one │ postgresql │
  ├──────────┼────────────┤
  │ conn-two │ mysql      │
  └──────────┴────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr ls",
}
`;

snapshot[`sqlr main 6`] = `
{
  code: 0,
  output: "All connections removed
",
  outputError: "",
  sqlrCommand: "sqlr clear",
}
`;

snapshot[`sqlr main 7`] = `
{
  code: 0,
  output: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  outputError: "",
  sqlrCommand: "sqlr ls",
}
`;

snapshot[`sqlr add and rm by name 1`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n test-pg -t postgresql -s "postgres://u:p@localhost:5432/db1"',
}
`;

snapshot[`sqlr add and rm by name 2`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n test-mysql -t mysql -s "mysql://u:p@localhost:3306/db2"',
}
`;

snapshot[`sqlr add and rm by name 3`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n test-mssql -t mssql -s "mssql://sa:World123!@localhost:1433/db"',
}
`;

snapshot[`sqlr add and rm by name 4`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n test-clickhouse -t clickhouse -s "http://u:p@localhost:8123?database=db"',
}
`;

snapshot[`sqlr add and rm by name 5`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n test-sqlite -t sqlite -s "/tmp/db.sqlite"',
}
`;

snapshot[`sqlr add and rm by name 6`] = `
{
  code: 0,
  output: "  ┌─────────────────┬────────────┐
  │ Name            │ Type       │
  ├─────────────────┼────────────┤
  │ test-clickhouse │ clickhouse │
  ├─────────────────┼────────────┤
  │ test-mssql      │ mssql      │
  ├─────────────────┼────────────┤
  │ test-mysql      │ mysql      │
  ├─────────────────┼────────────┤
  │ test-pg         │ postgresql │
  ├─────────────────┼────────────┤
  │ test-sqlite     │ sqlite     │
  └─────────────────┴────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr ls",
}
`;

snapshot[`sqlr add and rm by name 7`] = `
{
  code: 0,
  output: "Connection removed
",
  outputError: "",
  sqlrCommand: "sqlr rm -n test-pg",
}
`;

snapshot[`sqlr add and rm by name 8`] = `
{
  code: 0,
  output: "Connection removed
",
  outputError: "",
  sqlrCommand: "sqlr rm -n test-mysql",
}
`;

snapshot[`sqlr add and rm by name 9`] = `
{
  code: 0,
  output: "Connection removed
",
  outputError: "",
  sqlrCommand: "sqlr rm -n test-mssql",
}
`;

snapshot[`sqlr add and rm by name 10`] = `
{
  code: 0,
  output: "Connection removed
",
  outputError: "",
  sqlrCommand: "sqlr rm -n test-clickhouse",
}
`;

snapshot[`sqlr add and rm by name 11`] = `
{
  code: 0,
  output: "Connection removed
",
  outputError: "",
  sqlrCommand: "sqlr rm -n test-sqlite",
}
`;

snapshot[`sqlr add and rm by name 12`] = `
{
  code: 0,
  output: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  outputError: "",
  sqlrCommand: "sqlr ls",
}
`;

snapshot[`sqlr connection string encoding 1`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n enc-mssql -t mssql -s "mssql://sa:World123!%3B@localhost:1433/db?encrypt=true&trustServerCertificate=false"',
}
`;

snapshot[`sqlr connection string encoding 2`] = `
{
  code: 0,
  output: "  ┌───────────┬───────┬──────────────────────────────────────────────────────────────────────────────────┐
  │ Name      │ Type  │ Connection string                                                                │
  ├───────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
  │ enc-mssql │ mssql │ mssql://sa:World123!;@localhost:1433/db?encrypt=true&trustServerCertificate=fals │
  │           │       │ e                                                                                │
  └───────────┴───────┴──────────────────────────────────────────────────────────────────────────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr get enc-mssql",
}
`;

snapshot[`sqlr connection string encoding 3`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n enc-pg -t postgresql -s "postgres://localhost:5432/db?user=admin&password=p%40ss%3Aw%23rd&application_name=sqlr&sslmode=prefer"',
}
`;

snapshot[`sqlr connection string encoding 4`] = `
{
  code: 0,
  output: "  ┌────────┬────────────┬──────────────────────────────────────────────────────────────────────────────────┐
  │ Name   │ Type       │ Connection string                                                                │
  ├────────┼────────────┼──────────────────────────────────────────────────────────────────────────────────┤
  │ enc-pg │ postgresql │ postgres://localhost:5432/db?user=admin&password=p@ss:w#rd&application_name=sqlr │
  │        │            │ &sslmode=prefer                                                                  │
  └────────┴────────────┴──────────────────────────────────────────────────────────────────────────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr get enc-pg",
}
`;

snapshot[`sqlr connection string encoding 5`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: \`sqlr add -n enc-mysql -t mysql -s 'mysql://u:p%40ss@localhost:3306/db?ssl={"rejectUnauthorized":false}'\`,
}
`;

snapshot[`sqlr connection string encoding 6`] = `
{
  code: 0,
  output: '  ┌───────────┬───────┬───────────────────────────────────────────────────────────────────┐
  │ Name      │ Type  │ Connection string                                                 │
  ├───────────┼───────┼───────────────────────────────────────────────────────────────────┤
  │ enc-mysql │ mysql │ mysql://u:p@ss@localhost:3306/db?ssl={"rejectUnauthorized":false} │
  └───────────┴───────┴───────────────────────────────────────────────────────────────────┘
',
  outputError: "",
  sqlrCommand: "sqlr get enc-mysql",
}
`;

snapshot[`sqlr connection string encoding 7`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n enc-ch -t clickhouse -s "https://user:p%40ss%3Bword@localhost:8443?database=mydb"',
}
`;

snapshot[`sqlr connection string encoding 8`] = `
{
  code: 0,
  output: "  ┌────────┬────────────┬─────────────────────────────────────────────────────┐
  │ Name   │ Type       │ Connection string                                   │
  ├────────┼────────────┼─────────────────────────────────────────────────────┤
  │ enc-ch │ clickhouse │ https://user:p@ss;word@localhost:8443?database=mydb │
  └────────┴────────────┴─────────────────────────────────────────────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr get enc-ch",
}
`;

snapshot[`sqlr connection string encoding 9`] = `
{
  code: 0,
  output: "All connections removed
",
  outputError: "",
  sqlrCommand: "sqlr clear",
}
`;

snapshot[`sqlr encrypted connection via env var 1`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add -n encrypted-pg -t postgresql -s "postgres://u:p@localhost:5432/db1"',
}
`;

snapshot[`sqlr encrypted connection via env var 2`] = `
{
  code: 0,
  output: "  ┌──────────────┬────────────┬───────────────────────────────────┐
  │ Name         │ Type       │ Connection string                 │
  ├──────────────┼────────────┼───────────────────────────────────┤
  │ encrypted-pg │ postgresql │ postgres://u:p@localhost:5432/db1 │
  └──────────────┴────────────┴───────────────────────────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr get encrypted-pg",
}
`;

snapshot[`sqlr encrypted connection via env var 3`] = `
{
  code: 0,
  output: "All connections removed
",
  outputError: "",
  sqlrCommand: "sqlr clear",
}
`;

snapshot[`sqlr scoped connections 1`] = `
{
  output: "  ┌───────────┬────────────┐
  │ Name      │ Type       │
  ├───────────┼────────────┤
  │ repo-conn │ postgresql │
  └───────────┴────────────┘
",
  step: "repo-scoped connection visible",
}
`;

snapshot[`sqlr scoped connections 2`] = `
{
  output: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  step: "repo-scoped connection not visible in other repo",
}
`;

snapshot[`sqlr scoped connections 3`] = `
{
  output: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  step: "repo-scoped connection not visible globally",
}
`;

snapshot[`sqlr scoped connections 4`] = `
{
  output1: "  ┌─────────────┬───────┐
  │ Name        │ Type  │
  ├─────────────┼───────┤
  │ global-conn │ mysql │
  └─────────────┴───────┘
",
  output2: "  ┌─────────────┬───────┐
  │ Name        │ Type  │
  ├─────────────┼───────┤
  │ global-conn │ mysql │
  └─────────────┴───────┘
",
  step: "global connection visible from both repos",
}
`;

snapshot[`sqlr scoped connections 5`] = `
{
  output: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  step: "global connection not visible in repo scope",
}
`;

snapshot[`sqlr scoped connections 6`] = `
{
  globalOutput: "  ┌─────────────┬───────┐
  │ Name        │ Type  │
  ├─────────────┼───────┤
  │ global-conn │ mysql │
  └─────────────┴───────┘
",
  repoOutput: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  step: "clear only affects current scope",
}
`;

snapshot[`sqlr set-global 1`] = `
{
  output: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  step: "before set-global",
}
`;

snapshot[`sqlr set-global 2`] = `
{
  output: "Global mode: enabled
  ┌───────────┬────────────┐
  │ Name      │ Type       │
  ├───────────┼────────────┤
  │ global-db │ postgresql │
  └───────────┴────────────┘
",
  step: "after set-global",
}
`;

snapshot[`sqlr set-global 3`] = `
{
  output: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  step: "after set-global false",
}
`;

snapshot[`sqlr set 1`] = `
{
  output: "Default connection set to repo-db
",
  step: "set output",
}
`;

snapshot[`sqlr set 2`] = `
{
  output: "  ┌─────────┬────────────┬───────────────────────────────────┐
  │ Name    │ Type       │ Connection string                 │
  ├─────────┼────────────┼───────────────────────────────────┤
  │ repo-db │ postgresql │ postgres://u:p@localhost:5432/db1 │
  └─────────┴────────────┴───────────────────────────────────┘
",
  step: "get uses default",
}
`;

snapshot[`sqlr set 3`] = `
{
  output: "  ┌──────────┬───────┬────────────────────────────────┐
  │ Name     │ Type  │ Connection string              │
  ├──────────┼───────┼────────────────────────────────┤
  │ other-db │ mysql │ mysql://u:p@localhost:3306/db2 │
  └──────────┴───────┴────────────────────────────────┘
",
  step: "default in other repo is other-db",
}
`;

snapshot[`sqlr set 4`] = `
{
  output: "  ┌───────────┬────────────┬───────────────────────────────────┐
  │ Name      │ Type       │ Connection string                 │
  ├───────────┼────────────┼───────────────────────────────────┤
  │ global-db │ postgresql │ postgres://u:p@localhost:5432/db1 │
  └───────────┴────────────┴───────────────────────────────────┘
",
  step: "global default used from another repo",
}
`;

snapshot[`sqlr skill --init 1`] = `
{
  code: 0,
  inService: false,
  output: "Project root: <tmp> (git root)
Created .agents/skills/sqlr/SKILL.md  (Codex, Cursor)
Created .claude/skills/sqlr/SKILL.md  (Claude Code, Cursor)

Try: /sqlr how many users signed up this week
",
  sameContent: true,
  skill: '---
name: sqlr
description: Run SQL queries and inspect the schema of a database with the sqlr CLI. Use when asked to query, inspect, report on or change data in a database.
---

# sqlr

\`sqlr\` runs SQL against connections saved on this machine. Connections are
referenced by name. You never need, and must never ask for, a connection
string or password.

## Workflow

1. Run \`sqlr skill\` once to read the full reference (all commands and flags).
2. \`sqlr ls\` lists connections, the default is marked. Switch with
   \`sqlr set <name>\`.
3. \`sqlr describe --compact\` shows tables, columns, types and foreign keys.
   Narrow it with \`-f <table>\`. Read the schema before writing queries.
4. Run queries: \`sqlr "SELECT ... LIMIT 20"\` or
   \`sqlr path/to/query.sql -i "param: value"\`.
5. Use \`-o result.json\` for large results and \`--table\` for readable output.

## Rules

- Always add LIMIT to exploratory SELECT statements.
- Show UPDATE, DELETE, DROP and other destructive statements to the user and
  ask before running them.
- If a command prompts for an encryption password, stop and ask the user to
  run it, or to set SQLR_ENCRYPTION_PASSWORD.
',
}
`;

snapshot[`sqlr skill --init 2`] = `
{
  code: 0,
  output: "Project root: <tmp> (git root)
Created .agents/skills/sqlr-prod/SKILL.md  (Codex, Cursor)
Created .claude/skills/sqlr-prod/SKILL.md  (Claude Code, Cursor)

Try: /sqlr-prod how many users signed up this week
",
  skill: '---
name: sqlr-prod
description: Run SQL queries and inspect the schema of the \`prod\` database with the sqlr CLI. Use when asked to query, inspect, report on or change data in the \`prod\` database.
---

# sqlr-prod

\`sqlr\` runs SQL against connections saved on this machine. Connections are
referenced by name. You never need, and must never ask for, a connection
string or password.

## Workflow

1. Run \`sqlr skill\` once to read the full reference (all commands and flags).
2. Run \`sqlr set prod\` first so every command targets this
   connection.
3. \`sqlr describe --compact\` shows tables, columns, types and foreign keys.
   Narrow it with \`-f <table>\`. Read the schema before writing queries.
4. Run queries: \`sqlr "SELECT ... LIMIT 20"\` or
   \`sqlr path/to/query.sql -i "param: value"\`.
5. Use \`-o result.json\` for large results and \`--table\` for readable output.

## Rules

- Always add LIMIT to exploratory SELECT statements.
- Show UPDATE, DELETE, DROP and other destructive statements to the user and
  ask before running them.
- If a command prompts for an encryption password, stop and ask the user to
  run it, or to set SQLR_ENCRYPTION_PASSWORD.
',
}
`;

snapshot[`sqlr skill --init 3`] = `
{
  code: 1,
  output: "<tmp>/.agents/skills/sqlr-prod/SKILL.md already exists. Delete it first if you want to regenerate it.
",
  outputError: "",
}
`;

snapshot[`sqlr skill --init 4`] = `
{
  code: 0,
  inNotes: false,
  output: "Not in a git repository - installing for all projects in <tmp>/home
Created .agents/skills/sqlr/SKILL.md  (Codex, Cursor)
Created .claude/skills/sqlr/SKILL.md  (Claude Code, Cursor)

Try: /sqlr how many users signed up this week
",
  sameContent: true,
}
`;
